--- a/pages/subpages/mine/promoter-center/index.wxml
+++ b/pages/subpages/mine/promoter-center/index.wxml
@@ -1,4 +1,5 @@
 <wxs module="NUM" src="/utils/filters/num.wxs" />
+<wxs module="ARRAY" src="/utils/filters/array.wxs" />
 
 <view class="nav-bar-wrap {{navBarBgVisible ? 'show-bg' : ''}} level-{{curLevel}}" style="padding-top: {{statusBarHeight}}px;">
   <view class="nav-bar row">
@@ -10,113 +11,140 @@
   </view>
 </view>
 
-<view class="container level-{{curLevel || 0}}" style="padding-top: {{statusBarHeight + 60}}px;">
-  <view
-    class="upgradation-wrap"
-    style="background-image: url('https://static.tiddler.cn/mp/upgradation_bg_c{{curLevel}}.png')"
-    wx:if="{{curLevel < 4}}"
-  >
-    <view class="progress-desc">
-      <text>距离C{{ curLevel }}，仅差</text>
-      <text style="color: #f5701d">{{ NUM.toFixed(100 - (achievementInfo.percent || 0), 2) }}%</text>
-    </view>
-    <view class="progress-bar-wrap">
-      <view class="progress-bar-tips">涨分进度</view>
-      <view class="progress-bar">
+<view class="container level-{{curLevel}}" style="padding-top: {{statusBarHeight + 56}}px;">
+  <swiper style="height: 380rpx;" bindchange="swiperChange" current="{{curLevel - 1}}" previous-margin="40rpx" next-margin="40rpx">
+    <swiper-item wx:for="{{4}}" wx:key="index">
+      <view class="upgradation-wrap">
         <view
-          class="progress-bar-inner"
-          style="width: {{achievementInfo.percent}}%"
-        ></view>
-      </view>
-      <view class="progress-bar-tips">
-        {{ NUM.toFixed(achievementInfo.percent || 0, 2) }}%
-      </view>
-      <view class="upgrade-btn" bindtap="upgrade">
-        {{
-          achievementInfo.percent === 100 && !userInfo.enterpriseInfoId
-            ? "去升级"
-            : "去查看"
-        }}
-      </view>
-    </view>
-  </view>
-
-    <view class="account-info">
-    <view class="account-amount" wx:if="{{curLevel}}">
-      <view class="account-amount-header">
-        <view class="account-amount-title">我的账户</view>
-        <view class="withdraw-btn" bindtap="withdraw">提现</view>
-      </view>
-      <view class="amount-list">
-        <view class="amount-item">
-          <view class="amount">{{commissionSumInfo ? NUM.toFixed(commissionSumInfo.cashAmount, 2) : '0.00'}}</view>
-          <view class="amount-desc">可提现金额</view>
-        </view>
-        <view class="amount-item">
-          <view class="amount">{{commissionSumInfo ? NUM.toFixed(commissionSumInfo.pendingAmount, 2) : '0.00'}}</view>
-          <view class="amount-desc">待结算金额</view>
-        </view>
-        <view class="amount-item">
-          <view class="amount">{{commissionSumInfo ? NUM.toFixed(commissionSumInfo.settledAmount, 2) : '0.00'}}</view>
-          <view class="amount-desc">累积已结算金额</view>
-        </view>
-      </view>
-    </view>
-
-    <view class="account-daily-data">
-      <view class="date-menu">
-        <view
-          class="date {{curDateIdx === index ? 'selected' : ''}}"
-          wx:for="{{dateList}}"
-          wx:key="index"
-          bindtap="selectDate"
-          data-index="{{index}}"
+          class="upgradation-card {{curLevel === index + 1 ? 'active' : ''}}"
+          style="background-image: url('https://static.tiddler.cn/mp/promoter/level_{{index + 1}}/achievement_bg.png')"
         >
-          {{item}}
+          <!-- <view class="progress-desc">
+            <text>距离C{{ curLevel }}，仅差</text>
+            <text style="color: #f5701d">{{ NUM.toFixed(100 - (achievementInfo.percent || 0), 2) }}%</text>
+          </view>
+          <view class="progress-bar-wrap">
+            <view class="progress-bar-tips">涨分进度</view>
+            <view class="progress-bar">
+              <view
+                class="progress-bar-inner"
+                style="width: {{achievementInfo.percent}}%"
+              ></view>
+            </view>
+            <view class="progress-bar-tips">
+              {{ NUM.toFixed(achievementInfo.percent || 0, 2) }}%
+            </view>
+            <view class="upgrade-btn" bindtap="upgrade">
+              {{
+                achievementInfo.percent === 100 && !userInfo.enterpriseInfoId
+                  ? "去升级"
+                  : "去查看"
+              }}
+            </view>
+          </view> -->
         </view>
-        <view class="date" bindtap="withdraw">更多</view>
       </view>
-      <view class="daily-data-list">
-        <view class="daily-data-item">
-          <view class="daily-data">{{commissionTimeData ? commissionTimeData.orderCount : 0}}</view>
-          <view class="daily-data-desc">订单量</view>
+    </swiper-item>
+  </swiper>
+  <view class="achievement-wrap">
+    <view class="promoter-rights-title">当前权益</view>
+    <view class="promoter-rights-wrap">
+      <view class="rights-list">
+        <view class="rights-item" wx:for="{{ARRAY.slice(rightsList, 0, 4)}}" wx:key="index">
+          <view class="rights-icon-wrap">
+            <image class="rights-icon" src="https://static.tiddler.cn/mp/promoter/level_{{curLevel}}/{{item.icon}}.png" />
+            <image class="rights-lock" wx:if="{{curLevel === 1 && (index === 1 || index === 2)}}" src="https://static.tiddler.cn/mp/promoter/lock.png" />
+          </view>
+          <view class="rights-name">{{item.name}}</view>
         </view>
-        <view class="daily-data-item">
-          <view class="daily-data">{{commissionTimeData ? NUM.toFixed(commissionTimeData.salesVolume, 2) : '0.00'}}</view>
-          <view class="daily-data-desc">销售额</view>
-        </view>
-        <view class="daily-data-item">
-          <view class="daily-data">{{commissionTimeData ? NUM.toFixed(commissionTimeData.pendingAmount, 2) : '0.00'}}</view>
-          <view class="daily-data-desc">待结算金额</view>
-        </view>
-        <view class="daily-data-item">
-          <view class="daily-data">{{commissionTimeData ? NUM.toFixed(commissionTimeData.settledAmount, 2) : '0.00'}}</view>
-          <view class="daily-data-desc">已结算金额</view>
+      </view>
+      <view class="rights-list">
+        <view class="rights-item" wx:for="{{ARRAY.slice(rightsList, 4)}}" wx:key="index">
+          <image class="rights-icon" src="https://static.tiddler.cn/mp/promoter/level_{{curLevel}}/{{item.icon}}.png" />
+          <view class="rights-name">{{item.name}}</view>
         </view>
       </view>
     </view>
   </view>
 
-  <view class="customer-data-center">
-    <view class="title-wrap row between">
-      <view class="title">我的客户</view>
-      <view class="check-more-btn row" bindtap="navToCustomer" data-type="0">
-        <text>查看全部</text>
-        <image class="more-icon" src="./images/arrow.png" />
+  <view class="reward-wrap">
+    <view class="account-info">
+      <view class="account-amount" wx:if="{{curLevel}}">
+        <view class="account-amount-header">
+          <view class="account-amount-title">我的账户</view>
+          <view class="withdraw-btn" bindtap="withdraw">提现</view>
+        </view>
+        <view class="amount-list">
+          <view class="amount-item">
+            <view class="amount">{{commissionSumInfo ? NUM.toFixed(commissionSumInfo.cashAmount, 2) : '0.00'}}</view>
+            <view class="amount-desc">可提现金额</view>
+          </view>
+          <view class="amount-item">
+            <view class="amount">{{commissionSumInfo ? NUM.toFixed(commissionSumInfo.pendingAmount, 2) : '0.00'}}</view>
+            <view class="amount-desc">待结算金额</view>
+          </view>
+          <view class="amount-item">
+            <view class="amount">{{commissionSumInfo ? NUM.toFixed(commissionSumInfo.settledAmount, 2) : '0.00'}}</view>
+            <view class="amount-desc">累积已结算金额</view>
+          </view>
+        </view>
+      </view>
+  
+      <view class="account-daily-data">
+        <view class="date-menu">
+          <view
+            class="date {{curDateIdx === index ? 'selected' : ''}}"
+            wx:for="{{dateList}}"
+            wx:key="index"
+            bindtap="selectDate"
+            data-index="{{index}}"
+          >
+            {{item}}
+          </view>
+          <view class="date" bindtap="withdraw">更多</view>
+        </view>
+        <view class="daily-data-list">
+          <view class="daily-data-item">
+            <view class="daily-data">{{commissionTimeData ? commissionTimeData.orderCount : 0}}</view>
+            <view class="daily-data-desc">订单量</view>
+          </view>
+          <view class="daily-data-item">
+            <view class="daily-data">{{commissionTimeData ? NUM.toFixed(commissionTimeData.salesVolume, 2) : '0.00'}}</view>
+            <view class="daily-data-desc">销售额</view>
+          </view>
+          <view class="daily-data-item">
+            <view class="daily-data">{{commissionTimeData ? NUM.toFixed(commissionTimeData.pendingAmount, 2) : '0.00'}}</view>
+            <view class="daily-data-desc">待结算金额</view>
+          </view>
+          <view class="daily-data-item">
+            <view class="daily-data">{{commissionTimeData ? NUM.toFixed(commissionTimeData.settledAmount, 2) : '0.00'}}</view>
+            <view class="daily-data-desc">已结算金额</view>
+          </view>
+        </view>
       </view>
     </view>
-    <view class="customer-data-list">
-      <view class="customer-data-item" catchtap="navToCustomer" data-type="1">
-        <view class="customer-data-desc">今日新增客户数</view>
-        <view class="customer-data">{{customerData.todayNewCount || '-'}}</view>
+  
+    <view class="customer-data-center">
+      <view class="title-wrap row between">
+        <view class="title">我的客户</view>
+        <view class="check-more-btn row" bindtap="navToCustomer" data-type="0">
+          <text>查看全部</text>
+          <image class="more-icon" src="./images/arrow.png" />
+        </view>
       </view>
-      <view class="customer-data-item" catchtap="navToCustomer" data-type="2">
-        <view class="customer-data-desc">今日下单客户数</view>
-        <view class="customer-data">{{customerData.todayOrderingCount || '-'}}</view>
-      </view>
-      <view class="customer-data-item" catchtap="navToCustomer" data-type="3">
-        <view class="customer-data-desc">累积客户总数</view>
-        <view class="customer-data">{{customerData.totalCount || '-'}}</view>
+      <view class="customer-data-list">
+        <view class="customer-data-item" catchtap="navToCustomer" data-type="1">
+          <view class="customer-data-desc">今日新增客户数</view>
+          <view class="customer-data">{{customerData.todayNewCount || '-'}}</view>
+        </view>
+        <view class="customer-data-item" catchtap="navToCustomer" data-type="2">
+          <view class="customer-data-desc">今日下单客户数</view>
+          <view class="customer-data">{{customerData.todayOrderingCount || '-'}}</view>
+        </view>
+        <view class="customer-data-item" catchtap="navToCustomer" data-type="3">
+          <view class="customer-data-desc">累积客户总数</view>
+          <view class="customer-data">{{customerData.totalCount || '-'}}</view>
+        </view>
       </view>
     </view>
   </view>
