--- a/pages/subpages/home/media/components/input-popup/index.wxss
+++ b/pages/subpages/home/media/components/input-popup/index.wxss
@@ -24,6 +24,6 @@
   color: #fff;
   font-size: 14px;
   font-weight: bold;
-  background: #161F4E;
+  background: var(--blue-1);
   border-radius: 18px;
 }
