--- a/pages/subpages/home/media/live/live-push/components/push-room/components/hd-popup/index.wxss
+++ b/pages/subpages/home/media/live/live-push/components/push-room/components/hd-popup/index.wxss
@@ -23,7 +23,7 @@
 .resolution-selection.active {
   position: relative;
   color: #fff;
-  background: linear-gradient(128deg, #53678d 0%, #161F4E 100%);
+  background: linear-gradient(128deg, #53678d 0%, var(--blue-1) 100%);
 }
 .resolution-name {
   margin-top: 8px;
