--- a/components/live-item/index.wxss
+++ b/components/live-item/index.wxss
@@ -116,5 +116,5 @@
   font-weight: bold;
   line-height: 1;
   border-radius: 8rpx;
-  background: linear-gradient(128deg, #53678d 0%, #161F4E 100%);
+  background: linear-gradient(128deg, #53678d 0%, var(--blue-1) 100%);
 }
