--- a/pages/subpages/home/media/live/create-live/components/goods-picker-popup/index.wxss
+++ b/pages/subpages/home/media/live/create-live/components/goods-picker-popup/index.wxss
@@ -72,5 +72,5 @@
 }
 .confirm-btn.active {
   color: #fff;
-  background: linear-gradient(128deg, #53678d 0%, #161F4E 100%);
+  background: linear-gradient(128deg, #53678d 0%, var(--blue-1) 100%);
 }
