--- a/pages/subpages/home/media/live/create-live/index.wxss
+++ b/pages/subpages/home/media/live/create-live/index.wxss
@@ -74,7 +74,7 @@
 .resolution-selection.active {
   position: relative;
   color: #fff;
-  background: linear-gradient(128deg, #53678d 0%, #161F4E 100%);
+  background: linear-gradient(128deg, #53678d 0%, var(--blue-1) 100%);
 }
 .resolution-name {
   margin-top: 16rpx;
@@ -129,5 +129,5 @@
   color: #fff;
   font-size: 32rpx;
   border-radius: 44rpx;
-  background: #161F4E;
+  background: var(--blue-1);
 }
