--- a/components/note-item/index.wxml
+++ b/components/note-item/index.wxml
@@ -3,7 +3,7 @@
 <view class="note-item {{visible ? 'show' : ''}}" bindtap="navToNoteDetail">
   <view class="cover-wrap">
     <image class="cover" style="height: {{item.coverHeight}}rpx;" wx:if="{{item.coverHeight}}" src="{{item.imageList[0]}}?x-oss-process=image/resize,w_450" mode="aspectFill" />
-    <image class="cover" wx:if="{{!item.coverHeight}}" src="{{item.imageList[0]}}?x-oss-process=image/resize,w_450" bindload="onCoverLoaded" mode="widthFix" lazy-load />
+    <image class="cover" wx:if="{{!item.coverHeight}}" src="{{item.imageList[0]}}?x-oss-process=image/resize,w_450" bindload="onCoverLoaded" mode="widthFix" />
     <view class="private-tag row" wx:if="{{item.isPrivate}}">
       <image class="private-icon" src="/images/private-icon.png" />
       <text>私密</text>
