--- a/components/scenic-item/index.wxml
+++ b/components/scenic-item/index.wxml
@@ -1,7 +1,7 @@
 <view class="scenic-item {{visible ? 'show' : ''}}" bindtap="checkDetail">
   <view class="cover-wrap">
     <image class="cover" style="height: {{item.coverHeight}}rpx;" wx:if="{{item.coverHeight}}" src="{{item.cover}}?x-oss-process=image/resize,w_450" mode="aspectFill" />
-    <image class="cover" wx:if="{{!item.coverHeight}}" src="{{item.cover}}?x-oss-process=image/resize,w_450" bindload="onCoverLoaded" mode="widthFix" lazy-load />
+    <image class="cover" wx:if="{{!item.coverHeight}}" src="{{item.cover}}?x-oss-process=image/resize,w_450" bindload="onCoverLoaded" mode="widthFix" />
     <view class="type-label row">景点</view>
     <view class="address-info">
       <image class="address-icon" src="/images/address.png" />
