--- a/pages/subpages/mine/promoter-center/index.wxss
+++ b/pages/subpages/mine/promoter-center/index.wxss
@@ -77,6 +77,7 @@
     linear-gradient(180deg, #FEF4EA 20%, #FFFFFF 55%);
 }
 
+
 .upgradation-wrap {
   display: flex;
   align-items: center;
@@ -86,16 +87,17 @@
 }
 .upgradation-card {
   padding: 0 24rpx;
-  width: 640rpx; 
-  height: 358rpx;
+  width: 680rpx; 
+  height: 368rpx;
   background-size: contain;
   background-repeat: no-repeat;
   overflow: hidden;
-  transition: .2s ease;
+  transform: scale(1);
+  transition: transform 0.2s ease;
+  will-change: transform;
 }
-.upgradation-card.active {
-  zoom: 1.0625;
-  transition: .2s ease;
+.upgradation-card.not-active {
+  transform: scale(0.92);
 }
 .progress-desc {
   margin-top: 76rpx;
