--- a/pages/subpages/mall/scenic/components/notice-popup/index.wxss
+++ b/pages/subpages/mall/scenic/components/notice-popup/index.wxss
@@ -86,8 +86,8 @@
 }
 .confirm-btn {
   height: 88rpx;
-  color: #fff;
+  color: var(--gold-1);
   font-size: 32rpx;
-  background: linear-gradient(128deg, #53678d 0%, var(--blue-1) 100%);
+  background: var(--blue-linear-2);
   border-radius: 44rpx;
 }
