--- a/components/live-item/index.wxss
+++ b/components/live-item/index.wxss
@@ -111,10 +111,10 @@
   margin-left: 8rpx;
   padding: 0 18rpx;
   height: 40rpx;
-  color: #fff;
+  color: var(--gold-1);
   font-size: 20rpx;
   font-weight: bold;
   line-height: 1;
   border-radius: 8rpx;
-  background: linear-gradient(128deg, #53678d 0%, var(--blue-1) 100%);
+  background: var(--blue-linear-2);
 }
