--- a/pages/subpages/home/media/live/create-live/components/goods-picker-popup/index.wxss
+++ b/pages/subpages/home/media/live/create-live/components/goods-picker-popup/index.wxss
@@ -71,6 +71,6 @@
   border-radius: 32rpx;
 }
 .confirm-btn.active {
-  color: #fff;
-  background: linear-gradient(128deg, #53678d 0%, var(--blue-1) 100%);
+  color: var(--gold-1);
+  background: var(--blue-linear-2);
 }
