--- a/pages/subpages/mall/hotel/components/notice-popup/index.wxss
+++ b/pages/subpages/mall/hotel/components/notice-popup/index.wxss
@@ -160,8 +160,8 @@
   margin-left: 100rpx;
   flex: 1;
   height: 88rpx;
-  color: #fff;
+  color: var(--gold-1);
   font-size: 32rpx;
-  background: linear-gradient(128deg, #53678d 0%, var(--blue-1) 100%);
+  background: var(--blue-linear-2);
   border-radius: 44rpx;
 }
