--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -40,52 +40,52 @@
       <image class="edit-icon" wx:if="{{!userInfo.signature}}" src="https://img.ubo.vip/tiddler/mine/edit.png" />
     </view>
 
-    <view class="function-wrap">
-      <navigator class="function-item" url="/pages/subpages/mine/order/index" hover-class="none">
-        <image class="function-icon" src="https://static.tiddler.cn/mp/mine/order.png" />
-        <view class="function-desc">订单中心</view>
+    <view class="tool-wrap">
+      <navigator class="tool-item" url="/pages/subpages/mine/order/index" hover-class="none">
+        <image class="tool-icon" src="https://static.tiddler.cn/mp/mine/order.png" />
+        <view class="tool-desc">订单中心</view>
       </navigator>
-      <navigator class="function-item" url="/pages/subpages/mine/address/index" hover-class="none">
-        <image class="function-icon" src="https://static.tiddler.cn/mp/mine/address.png" />
-        <view class="function-desc">收货地址</view>
+      <navigator class="tool-item" url="/pages/subpages/mine/address/index" hover-class="none">
+        <image class="tool-icon" src="https://static.tiddler.cn/mp/mine/address.png" />
+        <view class="tool-desc">收货地址</view>
       </navigator>
-      <navigator class="function-item" url="/pages/subpages/mine/coupon/index" hover-class="none">
-        <image class="function-icon" src="https://static.tiddler.cn/mp/mine/coupon.png" />
-        <view class="function-desc">优惠券</view>
+      <navigator class="tool-item" url="/pages/subpages/mine/coupon/index" hover-class="none">
+        <image class="tool-icon" src="https://static.tiddler.cn/mp/mine/coupon.png" />
+        <view class="tool-desc">优惠券</view>
       </navigator>
       <navigator 
-        class="function-item" 
+        class="tool-item" 
         wx:if="{{userInfo.level || userInfo.merchantId || userInfo.scenicProviderId || userInfo.hotelProviderId || userInfo.cateringProviderId}}" 
         url="/pages/subpages/mine/balance/index" 
         hover-class="none"
       >
-        <image class="function-icon" src="https://static.tiddler.cn/mp/mine/balance.png" />
-        <view class="function-desc">我的余额</view>
+        <image class="tool-icon" src="https://static.tiddler.cn/mp/mine/balance.png" />
+        <view class="tool-desc">我的余额</view>
       </navigator>
-      <view class="function-item" wx:if="{{userInfo.level}}" bindtap="navToPromoterCenter">
-        <image class="function-icon" src="https://static.tiddler.cn/mp/mine/medal.png" />
-        <view class="function-desc">代言奖励</view>
+      <view class="tool-item" wx:if="{{userInfo.level}}" bindtap="navToPromoterCenter">
+        <image class="tool-icon" src="https://static.tiddler.cn/mp/mine/medal.png" />
+        <view class="tool-desc">代言奖励</view>
       </view>
       <navigator 
-        class="function-item" 
+        class="tool-item" 
         wx:if="{{userInfo.merchantId || userInfo.scenicProviderId || userInfo.hotelProviderId || userInfo.cateringProviderId}}" 
         url="/pages/subpages/mine/merchant/index" 
         hover-class="none"
       >
-        <image class="function-icon" src="https://static.tiddler.cn/mp/mine/merchant.png" />
-        <view class="function-desc">商家中心</view>
+        <image class="tool-icon" src="https://static.tiddler.cn/mp/mine/merchant.png" />
+        <view class="tool-desc">商家中心</view>
       </navigator>
-      <!-- <view class="function-item" bindtap="navToLive">
-        <image class="function-icon" src="https://static.tiddler.cn/mp/mine/live.png" />
-        <view class="function-desc">我的直播</view>
+      <!-- <view class="tool-item" bindtap="navToLive">
+        <image class="tool-icon" src="https://static.tiddler.cn/mp/mine/live.png" />
+        <view class="tool-desc">我的直播</view>
       </view> -->
-      <navigator class="function-item" url="/pages/subpages/mine/history/index" hover-class="none">
-        <image class="function-icon" src="https://static.tiddler.cn/mp/mine/history.png" />
-        <view class="function-desc">浏览历史</view>
+      <navigator class="tool-item" url="/pages/subpages/mine/history/index" hover-class="none">
+        <image class="tool-icon" src="https://static.tiddler.cn/mp/mine/history.png" />
+        <view class="tool-desc">浏览历史</view>
       </navigator>
-      <view class="function-item" bindtap="navToSetting">
-        <image class="function-icon" src="https://static.tiddler.cn/mp/mine/setting.png" />
-        <view class="function-desc">更多设置</view>
+      <view class="tool-item" bindtap="navToSetting">
+        <image class="tool-icon" src="https://static.tiddler.cn/mp/mine/setting.png" />
+        <view class="tool-desc">更多设置</view>
       </view>
     </view>
 
