--- a/pages/subpages/mine/promoter/index.wxml
+++ b/pages/subpages/mine/promoter/index.wxml
@@ -23,7 +23,7 @@
           <view class="upgradation-content">
             <view class="level-name">家乡代言人Lv.{{index + 1}}</view>
             <view class="level-expiration" wx:if="{{userInfo.level === index + 1}}">
-              2026.02.02到期
+              2026.02.02到期 每月8日更新等级
             </view>
             <view class="progress-wrap" wx:if="{{userInfo.level === index + 1}}">
               <view class="progress-bar-wrap row">
